# rc6

./: .gitignore  CMakeLists.txt  README.md
includes/: rc6.hpp
src/: rc6.cpp
test/: rc6_test.cpp
